still working on getting state working

--- a/projects/stepper-library/src/lib/steps/demo-step-one/components/demo-step-one-step/demo-step-one-step.component.html
+++ b/projects/stepper-library/src/lib/steps/demo-step-one/components/demo-step-one-step/demo-step-one-step.component.html
@@ -1,1 +1,3 @@
-<button (click)="login()">Login</button>
+<button (click)="dispatchIsCompleteAction()">Complete</button>
+
+<button (click)="login()">login</button>
